[gd_scene load_steps=2 format=3 uid="uid://cw2c1p6jqhpmg"]

[ext_resource type="Script" uid="uid://b08vsbnwod0tm" path="res://scripts/workday_new/event_panel.gd" id="1_vfixj"]

[node name="EventPanel" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_vfixj")

[node name="EventFrame" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 2
stretch_mode = 5

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2
vertical_scroll_mode = 3

[node name="CardContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10
